--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ header {
   <section class="hero" id="home">
     <h1>Welcome to ArtSynergy</h1>
     <p>Where artists collaborate, grow, and thrive in synergy.</p>
-    <a href="https://calendly.com/your-username" target="_blank">
+    <a href="https://calendly.com/your-username" target="_blank" rel="noopener">
       <button>Book Now</button>
     </a>
   </section>
@@ -329,7 +329,7 @@ header {
   <section class="cta" id="contact">
     <h2>Ready to Begin?</h2>
     <p>Join our community and amplify your artistic impact today.</p>
-    <a href="https://calendly.com/your-username" target="_blank">
+    <a href="https://calendly.com/your-username" target="_blank" rel="noopener">
       <button>Book Now</button>
     </a>
   </section>
