--- a/about.html
+++ b/about.html
@@ -22,10 +22,22 @@
     h2 {
   font-family: 'Georgia', serif;
   font-size: 32px;
-  color: black;
+  color: white;
   text-align: center;
   font-style: italic;
 }
+
+header {
+      background-color: transparent;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      position: fixed;
+      width: 100%;
+      z-index: 1000;
+      transition: background-color 0.3s ease;
+    }
+
 nav {
       
       padding: 10px;
@@ -38,6 +50,22 @@ nav {
       margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
+    }
+
+    /* Animation classes for scroll effects */
+    .section,
+    .slideshow-container,
+    .cta {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    }
+
+    .section.visible,
+    .slideshow-container.visible,
+    .cta.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     .timeline-container {
@@ -85,15 +113,22 @@ nav {
       font-weight: bold;
     }
     .hero {
-      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://via.placeholder.com/1400x500') center/cover no-repeat;
-      color: #fff;
+      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('print.jpg') no-repeat center center/cover;
+      color: white;
       text-align: center;
-      padding: 100px 20px;
+      background-attachment: fixed;
+      padding: 180px 40px 100px;
+      /* Added padding to account for fixed header */
+      margin-top: -20px;
+      /* Pulls the hero up to meet the header */
     }
 
     .hero h1 {
-      font-size: 2.8em;
-      margin-bottom: 10px;
+      font-family: 'Georgia', serif;
+  font-size: 42px;
+  color: burlywood;
+  text-align: center;
+  font-style: italic;
     }
     .hero p {
       font-size: 1.2em;
@@ -212,10 +247,9 @@ nav {
   </header>
 <!-- Hero -->
 <section class="hero">
-  <div class="container">
-    <h1>welcome to Artsynergy</h1>
+    <h1>Welcome to ArtSynergy</h1>
     <p>Bridging Creativity and Community.</p>
-  </div>
+    
 </section>
 
 <!-- Events Section -->
